bin_PROGRAMS = lsat
man1_MANS = lsat.1
dist_man_MANS = lsat.1
lsat_SOURCES = lsatmain.c dostuff.c checkpkgs.c checkrpm.c checkinetd.c checkinittab.c  checkhostsfiles.c checklogging.c  checkset.c checkwrite.c checkdotfiles.c checkpasswd.c checkfiles.c checkumask.c checkftpusers.c checkrc.c checkkbd.c checklimits.c checkssh.c checknetforward.c checknet.c checkcfg.c checkopenfiles.c checklistening.c checkissue.c checkwww.c checkmodules.c checkmd5.c checksecuretty.c checkrcperms.c checknetp.c checkbpass.c checkipv4.c checkx.c checkftp.c checkdisk.c checkservices.c checkpkgupdate.c checkpasstime.c

